--- a/mymusic.html
+++ b/mymusic.html
@@ -319,7 +319,7 @@ Album
 >why do I always let them rip me apart</p>
 <p><span style="color:#C12283"
 >apart, apart</p>
-<p><span style="color:C12283"
+<p><span style="color:#C12283"
 >and once that they’re gone, I’m never me again</p>
 <p>they really just don’t see how bad I’m suffering</p>
 <p>how could I possibly let them do this to me</p>
