--- a/project.html
+++ b/project.html
@@ -218,8 +218,10 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p>During the Summer of 2018, I participated in the Summer Research Institute (SRI) at STU, where we learned about XXXX and YYYY.</p>
-<p>My project consisted of XXXX</p>
+<center>
+ST. Thomas University Summer Research Institue 2018
+<center>
+<p><img src="Slide1.JPG" style="width:65%; margin-center: 20px" align="center"></p>
 
 
 
