--- a/index.html
+++ b/index.html
@@ -219,7 +219,16 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="eliana_pic.jpg" style="width:35%; margin-right: 20px" align="left"></p>
-<p>My name is Eliana Espinosa, I am currently a student at <a href="https://www.stu.edu">St. Thomas University</a>, majoring in <em>Mathematics</em>.I am 21 years old, I’m a cancer survivor, and I was born in Brooklyn, NY but was raised in Miami, FL. When I am not working or studying I like to write lyrics about different experiences in life. I have been writing for about 3 years and my best song ideas tend to come to me late at night when I am trying to fall asleep.</p>
+<div id="about-me" class="section level2">
+<h2>About Me</h2>
+<p>My name is Eliana Espinosa, I am currently a student at <a href="https://www.stu.edu">St. Thomas University</a>, majoring in <em>Mathematics</em>.I am 21 years old, I’m a cancer survivor, and I was born in Brooklyn, NY but was raised in Miami, FL. As a Math major, i have worked on several projects with R programming language and you can see them by clicking on the Projects tab. When I am not working or studying I like to write lyrics about different experiences in life. I have been writing for about 3 years and my best song ideas tend to come to me late at night when I am trying to fall asleep.</p>
+</div>
+<div id="musical-inspirations" class="section level2">
+<h2>Musical Inspirations</h2>
+<p>Below is playlist with some of my musical inspirations like Taylor Swift, Alicia Keys, Halsey, Elvis, etc. My favorite artist is Taylor Swift because she is also a songwriter and I have loved her music since I was 10 years old and first heard her song Teardrops On My Guitar. I will finally be attending her concert for the first tim in my life. I will be Going to the Tampa show on August 14 and the Miami show on August 18.</p>
+<iframe src="https://open.spotify.com/embed/user/224ou2jzwdbezmgjgqhi5443a/playlist/0RqgkR9Yc9sVuVm9mjTzJN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media">
+</iframe>
+</div>
 
 
 
