--- a/mymusic.html
+++ b/mymusic.html
@@ -664,6 +664,38 @@ Album
 <p><span style="color:#C12283"
 >(chorus)</p>
 </div>
+<div id="free" class="section level2">
+<h2>Free</h2>
+<p>This is a song a wrote about the day that I was told that I was cancer free.</p>
+<p><img src="eli2003.jpg" style="width:40%; margin-center: 20px" align="center"></p>
+<p>It was the year 2004 on April 23</p>
+<p>The day that ended all the suffering</p>
+<p>No more waiting around</p>
+<p>Goodbye hospital gowns</p>
+<p>Say hello to playgrounds</p>
+<p>I’m free to be a child</p>
+<p><span style="color:#C12283"
+> I’m free, cancer free</p>
+<p><span style="color:#C12283"
+> I’m free, finally</p>
+<p><span style="color:#C12283"
+> I’m free, cancer free</p>
+<p><span style="color:#C12283"
+> I’m free, finally</p>
+<p>I’ll no longer deal with bullies</p>
+<p>I won’t have to hide in hoodies</p>
+<p>My hair will grow back</p>
+<p>I’ll no longer be sad</p>
+<p>I’m a brand new girl</p>
+<p>Ready for the world</p>
+<p><span style="color:#C12283"
+> (chorus)</p>
+<p>Even on my darkest days I chose to find the light</p>
+<p>I knew I couldn’t give, had to put up a fight</p>
+<p>I’m more than ready to live an amazingly free life</p>
+<p><span style="color:#C12283"
+>(chorus)</p>
+</div>
 
 
 
