--- a/project.html
+++ b/project.html
@@ -222,6 +222,10 @@ $(document).ready(function () {
 ST. Thomas University Summer Research Institue 2018
 <center>
 <p><img src="Slide1.JPG" style="width:65%; margin-center: 20px" align="center"></p>
+<center>
+ST. Thomas University Summer Research Institue 2018
+<center>
+<p><img src="SLIDE2.JPG" style="width:65%; margin-center: 20px" align="center"></p>
 
 
 
