--- a/mymusic.html
+++ b/mymusic.html
@@ -616,8 +616,60 @@ Album
 <p><span style="color:#C12283"
 >(chorus)</p>
 </div>
+<div id="dont-rush" class="section level2">
+<h2>10. Don’t Rush</h2>
+<p>Here we are, I’m crying</p>
+<p>and you’re yelling</p>
+<p>Once again arguing</p>
+<p>over something so petty</p>
+<p>You want to control</p>
+<p>everything that I do</p>
+<p>You think you have a say</p>
+<p>in the choices I make</p>
+<p>But darling, darling, darling</p>
+<p>I think I’m running away</p>
+<p><span style="color:#C12283"
+> Chorus</p>
+<p><span style="color:#C12283"
+> These things happen</p>
+<p><span style="color:#C12283"
+> when you rush into something</p>
+<p><span style="color:#C12283"
+> for not wanting to be alone</p>
+<p><span style="color:#C12283"
+> and this no longer feels like home</p>
+<p><span style="color:#C12283"
+> Now I know it’s time to go</p>
+<p><span style="color:#C12283"
+> This love is everything I feared</p>
+<p><span style="color:#C12283"
+> Not even love, nowhere near</p>
+<p><span style="color:#C12283"
+> It’ll hurt, but I can’t stick around</p>
+<p><span style="color:#C12283"
+> Not when you keep me this stressed out</p>
+<p>Here we are, I’m upset</p>
+<p>you’re giving me that guilt trip</p>
+<p>You say that I’m (the)</p>
+<p>love of your life</p>
+<p>but that’s not what I</p>
+<p>felt last night</p>
+<p>Everyday this just gets worse</p>
+<p>It all just feels like some kind of curse</p>
+<p>and darling, darling, darling</p>
+<p>I think I’m running away</p>
+<p><span style="color:#C12283"
+> (chorus)</p>
+<p>Bridge:</p>
+<p>My apologies, but I must leave</p>
+<p>This has sucked, all the life in me</p>
+<p>I really hoped for the best</p>
+<p>But now it’s time to give it a rest</p>
+<p><span style="color:#C12283"
+> (chorus)</p>
+</div>
 <div id="when-she-learned-to-let-go" class="section level2">
-<h2>10. When She Learned to Let Go</h2>
+<h2>11. When She Learned to Let Go</h2>
 <p>Young girl raised so beautifully sweet</p>
 <p>She’d tend to love a little too intensely</p>
 <p>Blinded by her lovely sunrise</p>
@@ -693,6 +745,56 @@ Album
 <p>Even on my darkest days I chose to find the light</p>
 <p>I knew I couldn’t give, had to put up a fight</p>
 <p>I’m more than ready to live an amazingly free life</p>
+<p><span style="color:#C12283"
+>(chorus)</p>
+</div>
+<div id="what-am-i-doing" class="section level2">
+<h2>What Am I Doing?</h2>
+<p>I know this isn’t right, I know this won’t work</p>
+<p>Can see straight through your lies, see it in your smirk</p>
+<p>I just can’t keep putting up with all this hurt</p>
+<p>done nothing but fill my eyes with dirt</p>
+<p><span style="color:red"
+> Pre Chorus:</p>
+<p><span style="color:red"
+> All I ask myself</p>
+<p><span style="color:red"
+> All I ask myself</p>
+<p><span style="color:red"
+> All I ask myself</p>
+<p><span style="color:#C12283"
+> Chorus:</p>
+<p><span style="color:#C12283"
+> W-w-what am I doing anyway</p>
+<p><span style="color:#C12283"
+>I know it’s time, time to walk away</p>
+<p><span style="color:#C12283"
+>A And you keep begging, begging me to stay</p>
+<p><span style="color:#C12283"
+> W-w-what am I doing anyway</p>
+<p><span style="color:#C12283"
+>Don’t want to hear it, what you say</p>
+<p><span style="color:#C12283"
+>Just stop begging, begging me to stay</p>
+<p><span style="color:#C12283"
+>W-w-what am I doing anyway</p>
+<p>Everyday is a hassle, all we do is argue</p>
+<p>You say you love me, but I doubt that’s true</p>
+<p>And I can’t feel it, what I once felt for you</p>
+<p>Now we’re spinning, you’re the sun I’m the moon</p>
+<p><span style="color:red"
+>(pre-chorus)</p>
+<p><span style="color:#C12283"
+>(chorus)</p>
+<p>Bridge:</p>
+<p>Hurts to leave the one I thought would be mine forever</p>
+<p>Kept trying to make it work, tried to make it better</p>
+<p>But now nothing can save us, this day’s too bitter</p>
+<p>No matter how hard you try, just can’t change someone</p>
+<p>This goes for you, goes for me</p>
+<p>We’ll learn from this, learn our lesson finally</p>
+<p><span style="color:red"
+>(pre-chorus)</p>
 <p><span style="color:#C12283"
 >(chorus)</p>
 </div>
