--- a/index.html
+++ b/index.html
@@ -218,10 +218,11 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="eliana_pic.jpg" style="width:35%; margin-right: 20px" align="left"> <img src="eliana_pic.jpg" style="width:35%; margin-right: 20px" align="left"></p>
+<p><img src="eliana_pic.jpg" style="width:35%; margin-right: 20px" align="left"></p>
 <div id="about-me" class="section level2">
 <h2>About Me</h2>
 <p>My name is Eliana Espinosa, I am currently a student at <a href="https://www.stu.edu">St. Thomas University</a>, majoring in <em>Mathematics</em>.I am 21 years old, I’m a cancer survivor, and I was born in Brooklyn, NY but was raised in Miami, FL. As a Math major, i have worked on several projects with R programming language and you can see them by clicking on the Projects tab. When I am not working or studying I like to write lyrics about different experiences in life. I have been writing for about 3 years and my best song ideas tend to come to me late at night when I am trying to fall asleep.</p>
+<p><img src="eliana_logo.jpg" style="width:25%; margin-right: 20px" align="left"></p>
 </div>
 <div id="musical-inspirations" class="section level2">
 <h2>Musical Inspirations</h2>
