--- a/contact.html
+++ b/contact.html
@@ -221,6 +221,7 @@ $(document).ready(function () {
 <p>Feel free to contact me at</p>
 <p><a href="mailto:eliana-e@live.com">eliana-e@live.com</a></p>
 <p>Instagram: <span class="citation">@esp_eliana</span></p>
+<p><img src="eliana_logo.jpg" style="width:35%; margin-right: 20px" align="left"></p>
 
 
 
