--- a/mymusic.html
+++ b/mymusic.html
@@ -307,8 +307,46 @@ Album
 <p><span style="color:#C12283"
 > (chorus)</p>
 </div>
+<div id="beatiful-man" class="section level2">
+<h2>3. Beatiful Man</h2>
+<p>Beautiful man, I’m your number 1 fan</p>
+<p>If only you knew how you make this girl dance</p>
+<p>From your dark brown hair, to that mysterious stare</p>
+<p>From the beat of your heart, to the love that you share</p>
+<p>That everlasting smile could never go out of style</p>
+<p>Beautiful man, loved you for quite a while</p>
+<p><span style="color:#C12283"
+> Chrous:</p>
+<p><span style="color:#C12283"
+> You’re way too mesmerizing</p>
+<p><span style="color:#C12283"
+>This may be a bit surprising</p>
+<p><span style="color:#C12283"
+> But you’ve been my creative inspiration</p>
+<p><span style="color:#C12283"
+>Beauiful man, beautiful man</p>
+<p><span style="color:#C12283"
+>A truly amzing, beautiful man</p>
+<p>Beautiful man, I’m your number 1 fan</p>
+<p>If only you knew how you help me understand</p>
+<p>All the meaning and the beauty of life</p>
+<p>The difference between wrong and right</p>
+<p>Your willingness to help and strong sense of self</p>
+<p>A true inspiration, a wonderful creation</p>
+<p>Beautiful man, loved you for quite a while</p>
+<p><span style="color:#C12283"
+>(chorus)</p>
+<p>Bridge:</p>
+<p>You’re everything I’ve wanted and more</p>
+<p>A man I truly adore</p>
+<p>And any girl in the world</p>
+<p>would be lucky to be.. yours</p>
+<p>beautiful man</p>
+<p><span style="color:#C12283"
+>(chorus)</p>
+</div>
 <div id="mess-with-my-heart" class="section level2">
-<h2>3. Mess With My Heart</h2>
+<h2>4. Mess With My Heart</h2>
 <p><span style="color:#C12283"
 >Chorus:</p>
 <p><span style="color:#C12283"
@@ -350,7 +388,7 @@ Album
 </p>
 </div>
 <div id="selfish" class="section level2">
-<h2>4. Selfish</h2>
+<h2>5. Selfish</h2>
 <p>many people tend to let go of the ones they love</p>
 <p>feelings aside, putting their love’s happiness above</p>
 <p>many people only want the best for their other half</p>
@@ -400,7 +438,7 @@ Album
 >(chorus)</p>
 </div>
 <div id="misunderstood" class="section level2">
-<h2>5. Misunderstood</h2>
+<h2>6. Misunderstood</h2>
 <p>Misunderstood are these thoughts I have</p>
 <p>Man, can you explain these feelings</p>
 <p>Knowing this is love that can’t happen</p>
@@ -435,7 +473,7 @@ Album
 >(chorus)</p>
 </div>
 <div id="if-this-was-love" class="section level2">
-<h2>6. If This Was Love</h2>
+<h2>7. If This Was Love</h2>
 <p>no disrespect but I must admit</p>
 <p>you ruined my life in an instant</p>
 <p>unknowingly I fell for you</p>
@@ -483,7 +521,7 @@ Album
 </blockquote>
 </div>
 <div id="empty-space" class="section level2">
-<h2>7. Empty Space</h2>
+<h2>8. Empty Space</h2>
 <p>Dating back and forth to fill that empty space</p>
 <p>Been feeling incomplete since I first saw your face</p>
 <p>Now I always feel the need to go out of my way</p>
@@ -532,7 +570,7 @@ Album
 <p>x 2</p>
 </div>
 <div id="it-couldve-been-you" class="section level2">
-<h2>8. It Could’ve Been You</h2>
+<h2>9. It Could’ve Been You</h2>
 <p>you call me to tell me how much you miss me</p>
 <p>2am phone calls because you can’t sleep</p>
 <p>it hurts you to see him treat me like a queen</p>
@@ -577,7 +615,7 @@ Album
 >(chorus)</p>
 </div>
 <div id="butterflies" class="section level2">
-<h2>9. Butterflies</h2>
+<h2>10. Butterflies</h2>
 <p>My oh my, I guess I should thank you</p>
 <p>For making me feel so brand new</p>
 <p>My thoughts on love have changed</p>
@@ -617,7 +655,7 @@ Album
 >(chorus)</p>
 </div>
 <div id="dont-rush" class="section level2">
-<h2>10. Don’t Rush</h2>
+<h2>11. Don’t Rush</h2>
 <p>Here we are, I’m crying</p>
 <p>and you’re yelling</p>
 <p>Once again arguing</p>
@@ -669,7 +707,7 @@ Album
 > (chorus)</p>
 </div>
 <div id="when-she-learned-to-let-go" class="section level2">
-<h2>11. When She Learned to Let Go</h2>
+<h2>12. When She Learned to Let Go</h2>
 <p>Young girl raised so beautifully sweet</p>
 <p>She’d tend to love a little too intensely</p>
 <p>Blinded by her lovely sunrise</p>
