--- a/mymusic.html
+++ b/mymusic.html
@@ -835,6 +835,40 @@ Album
 >(pre-chorus)</p>
 <p><span style="color:#C12283"
 >(chorus)</p>
+<p>The song below is something that I wrote for my boyfriend.It’s called Pi Day because it is the day of our anniversary.</p>
+</div>
+<div id="pi-day" class="section level2">
+<h2>Pi Day</h2>
+<p><span style="color:#C12283"
+>Chorus:</p>
+<p><span style="color:#C12283"
+>From lighitng my kicthen up on fire</p>
+<p><span style="color:#C12283"
+>To watching the sunrise in my car</p>
+<p><span style="color:#C12283"
+>You’ve made your way into my heart</p>
+<p><span style="color:#C12283"
+>You’ve made your way into my heart</p>
+<p><span style="color:#C12283"
+> X 2</p>
+<p>Knew you’d be the one I’d marry, marry</p>
+<p>From the moment we met in February</p>
+<p>Every moment with you is extraordinary</p>
+<p>On our first date dinner I dropped a knife</p>
+<p>We’ll laugh at that for the rest of my life</p>
+<p>It’s the little things that make us who we are</p>
+<p>You’re a wish come true off a shooting star</p>
+<p>You’re a wish come true off a shooting star</p>
+<p><span style="color:#C12283"
+> (chorus) X2</p>
+<p>I love you with all that’s in my heart</p>
+<p>I love you, always have, right from the start</p>
+<p>Never thought I’d find someoneso soon</p>
+<p>Now my 2ams are better than my noons</p>
+<p>There’s no better feeling than waking up to you</p>
+<p>Babe I’ve never had a love, a love so good</p>
+<p><span style="color:#C12283"
+>(chorus) X2</p>
 </div>
 
 
