--- a/mymusic.html
+++ b/mymusic.html
@@ -706,8 +706,50 @@ Album
 <p><span style="color:#C12283"
 > (chorus)</p>
 </div>
+<div id="over-it" class="section level2">
+<h2>12. Over It</h2>
+<p>No more sleepless nights</p>
+<p>No more twists and turning</p>
+<p>Let go of toxicity, free’d my mind</p>
+<p>I no longer cry to songs</p>
+<p>That remind me of you</p>
+<p>I no longer search for your smile</p>
+<p>When i look at the moon</p>
+<p>Won’t disrespect myself</p>
+<p>by thinking of you</p>
+<p><span style="color:#C12283"
+>Chorus:</p>
+<p><span style="color:#C12283"
+>Over it, over it, over you</p>
+<p><span style="color:#C12283"
+>Dont with it, done with it, done with you</p>
+<p><span style="color:#C12283"
+>I’m no longer thinking of you</p>
+<p><span style="color:#C12283"
+>I’ve got better things to do</p>
+<p><span style="color:#C12283"
+>Than to let you mess with my head, heart &amp; mood</p>
+<p>You used to affect all my decisions</p>
+<p>Now I take deep breaths before every move</p>
+<p>My life, no longer affected by your intuitions</p>
+<p>I no longer seek approval from you</p>
+<p>I’m happier, free, and satisfied with me</p>
+<p>I’m growing, glowing, and raising myself</p>
+<p>You’re not even a 3rd of who I aspire to be</p>
+<p><span style="color:#C12283"
+>(chorus)</p>
+<p>Bridge:</p>
+<p>Free yourself from toxicity</p>
+<p>Let yourself be free</p>
+<p>Don’t let them take away your ease</p>
+<p>Free yourself from toxicity</p>
+<p>Let yourself be free</p>
+<p>Don’t let them take away your ease</p>
+<p><span style="color:#C12283"
+>(chorus)</p>
+</div>
 <div id="when-she-learned-to-let-go" class="section level2">
-<h2>12. When She Learned to Let Go</h2>
+<h2>13. When She Learned to Let Go</h2>
 <p>Young girl raised so beautifully sweet</p>
 <p>She’d tend to love a little too intensely</p>
 <p>Blinded by her lovely sunrise</p>
@@ -869,6 +911,70 @@ Album
 <p>Babe I’ve never had a love, a love so good</p>
 <p><span style="color:#C12283"
 >(chorus) X2</p>
+</div>
+<div id="forgetting" class="section level2">
+<h2>Forgetting</h2>
+<p>Running on 3 hours of sleep</p>
+<p>YOu’re gone, I’m here and can’t breathe</p>
+<p>I love you more than I love me</p>
+<p>But I had to sit back and watch you leave</p>
+<p>There’s nothing left for me to do</p>
+<p>Except hope that fate will lead me to you</p>
+<p><span style="color:#C12283"
+>Chorus:</p>
+<p><span style="color:#C12283"
+>Forgetting’s not so easy to do</p>
+<p><span style="color:#C12283"
+>Not when they meant that much to you</p>
+<p><span style="color:#C12283"
+>Not when you saw their face everyday</p>
+<p><span style="color:#C12283"
+>Not when they took your breath away</p>
+<p><span style="color:#C12283"
+>You can’t just go and leave me here</p>
+<p><span style="color:#C12283"
+>When I made your troubles all disappear</p>
+<p><span style="color:#C12283"
+>When I stood firm by your side all the time</p>
+<p><span style="color:#C12283"
+>When I could have been the love of your life</p>
+<p>So you heard I found somebody new</p>
+<p>To escape every single thought of you</p>
+<p>But your name still haunts me in my dreams</p>
+<p>And I just could never ever fall for him</p>
+<p>Because he just isnt you</p>
+<p><span style="color:#C12283"
+>(chorus)</p>
+<p>Bridge:</p>
+<p>I don’t wanna let go… no no no</p>
+<p>I don’t wanna move on… no no no</p>
+<p>I only wish you’d be here</p>
+<p>Cause I feel so lost, so lost, lost without you</p>
+<p><span style="color:#C12283"
+>(chorus)</p>
+<div id="below-is-a-song-that-i-am-currently-writing-but-havent-finished-yet" class="section level3">
+<h3>Below is a song that I am currently writing but haven’t finished yet</h3>
+</div>
+</div>
+<div id="gravitational-pull" class="section level2">
+<h2>Gravitational Pull</h2>
+<p>Pre-Chorus:</p>
+<p>You know that no one can love me like you</p>
+<p>We might be from earth but our love’s like the moon</p>
+<p><span style="color:#C12283"
+>Chorus:</p>
+<p><span style="color:#C12283"
+>Gravitational Pull, Gravitational Pull</p>
+<p><span style="color:#C12283"
+>Nobody,nobody loves me like you</p>
+<p><span style="color:#C12283"
+>Top of the stratosphere such a great view</p>
+<p><span style="color:#C12283"
+>When you’re not here I feel like I can’t breathe</p>
+<p><span style="color:#C12283"
+>The force of your love’s got me down on my knees</p>
+<p><span style="color:#C12283"
+>Gravitational Pull, Gravitational Pull</p>
 </div>
 
 
