--- a/mymusic.html
+++ b/mymusic.html
@@ -227,6 +227,8 @@ Album
 <center>
 <div id="please-fall-in-love-with-me" class="section level2">
 <h2>1. Please Fall in Love With Me</h2>
+<div id="this-is-a-song-that-i-wrote-about-someone-who-i-admired-a-lot-and-had-a-huge-crush-on.-this-is-probably-the-longest-crush-i-have-ever-had-on-anybody.-i-think-sometimes-we-meet-people-who-just-seem-to-be-so-perfetly-flawless-to-us.-they-become-really-important-to-us-and-even-though-maybe-you-were-not-necessarily-meant-to-end-up-togeher-you-were-definitely-meant-to-at-least-meet-and-be-an-important-part-of-each-others-lives-for-a-while.-this-person-helped-me-become-a-better-version-of-myself-and-to-tis-day-i-will-always-be-grateful-to-have-crossed-paths-with-that-person-even-if-it-was-only-for-a-limited-time.." class="section level4">
+<h4>This is a song that I wrote about someone who I admired a lot and had a huge crush on. This is probably the longest crush I have ever had on anybody. I think sometimes we meet people who just seem to be so perfetly flawless to us. They become really important to us and even though maybe you were not necessarily meant to end up togeher, you were definitely meant to at least meet and be an important part of each other’s lives for a while. This person helped me become a better version of myself, and to tis day I will always be grateful to have crossed paths with that person even if it was only for a limited time..</h4>
 <p>It’s been a long time since I’ve had someone</p>
 <p>to hold me, comfort me, go out, and have some fun</p>
 <p>I’ve had my things, had my flings, but all them temporary</p>
@@ -262,8 +264,11 @@ Album
 <center>
 <center>
 </div>
+</div>
 <div id="those-nights" class="section level2">
 <h2>2. Those Nights</h2>
+<div id="this-is-a-song-i-wrote-about-3-years-ago-when-i-went-through-a-break-up-with-someone-i-was-with-for-about-2-years.-when-i-met-him-it-was-in-colombia-and-he-was-someone-i-fell-really-hard-for-and-was-my-first-love.-it-was-always-really-hard-for-me-when-i-had-to-come-back-to-miami-and-not-be-able-to-see-him-for-months.-when-we-broke-up-it-was-really-hard-for-me-because-i-ended-up-finding-out-that-he-moved-in-with-one-of-his-exes-while-he-was-still-with-me.-i-too-me-along-time-to-gwt-over-him-and-once-i-was-finally-starting-to-get-over-him-he-tried-to-come-back-into-my-life.-thankfully-i-saw-past-his-lies-that-time-and-eventually-got-over-him." class="section level4">
+<h4>This is a song I wrote about 3 years ago when I went through a break up with someone I was with for about 2 years. When I met him it was in Colombia and he was someone I fell really hard for and was my first love. It was always really hard for me when I had to come back to Miami and not be able to see him for months. When we broke up it was really hard for me because I ended up finding out that he moved in with one of his exes while he was still with me. I too me along time to gwt over him and once I was finally starting to get over him, he tried to come back into my life. Thankfully I saw past his lies that time and eventually got over him.</h4>
 <p>Tell me how to feel when I’m alone</p>
 <p>teach me my way out of this deep hole</p>
 <p>cause I’m here without you in this broken road</p>
@@ -307,8 +312,11 @@ Album
 <p><span style="color:#C12283"
 > (chorus)</p>
 </div>
+</div>
 <div id="beatiful-man" class="section level2">
 <h2>3. Beatiful Man</h2>
+<div id="sometimes-in-life-we-have-people-who-become-a-huge-creative-inspiration-for-us.-with-this-person-song-ideas-just-flew-left-and-right.-i-was-always-able-to-imagine-a-scenario-for-me-and-that-person-and-be-able-to-write-according-to-this-scenario.-though-my-feelings-for-this-person-remain-unclear-i-always-felt-that-the-person-i-wrote-this-song-about-is-just-a-beautiful-person-inside-and-out.-that-is-why-i-felt-that-writing-this-song-about-them-was-necessary." class="section level4">
+<h4>Sometimes in life we have people who become a huge creative inspiration for us. With this person, song ideas just flew left and right. I was always able to imagine a scenario for me and that person and be able to write according to this scenario. Though my feelings for this person remain unclear, I always felt that the person I wrote this song about is just a beautiful person inside and out. That is why I felt that writing this song about them was necessary.</h4>
 <p>Beautiful man, I’m your number 1 fan</p>
 <p>If only you knew how you make this girl dance</p>
 <p>From your dark brown hair, to that mysterious stare</p>
@@ -344,6 +352,7 @@ Album
 <p>beautiful man</p>
 <p><span style="color:#C12283"
 >(chorus)</p>
+</div>
 </div>
 <div id="mess-with-my-heart" class="section level2">
 <h2>4. Mess With My Heart</h2>
